k8s/default_http_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-backend
spec:
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 443
